Adding more type information

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "none",
     "target": "es6",
     "checkJs": true,
     "allowSyntheticDefaultImports": true
