--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,13 @@
     "$": "readonly",
     "CodeMirror": "readonly",
     "expect": "readonly",
+    "ga": "readonly",
     "moment": "readonly",
     "mumuki": "writable",
     "muvment": "readonly",
     "NProgress": "readonly"
+  },
+  "rules": {
+    "no-unused-vars": [2, {"argsIgnorePattern": "^_"}]
   }
 }
