--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,12 @@ before_script:
 script:
 - bundle exec rake db:schema:load
 - bundle exec rake
+- bundle exec rake teaspoon
 services:
 - postgresql
 addons:
+  addons:
+    firefox: latest
   code_climate:
     repo_token: 820e155f1bff3d5cfcb84eae1caace7cd9ec5a27540f52222620896dc010b3ee
 env:
@@ -21,6 +24,8 @@ env:
   - RACK_ENV=test CODECLIMATE_REPO_TOKEN=820e155f1bff3d5cfcb84eae1caace7cd9ec5a27540f52222620896dc010b3ee
   global:
   - secure: IW65qMjgbuuj4kUsBwaY+iV+jaIedgf2V3W7bTLj1SjaNdc8hC9SXBiNWQrT9Ygu5Q67mKzXuu5GTyAvAGftF02UKgT+yDE43p+a9w2+Onx5dGTIXCCREIE9fgmQhAkqgt9+1E99fRWsQzqkpEVINOMvumk+HM/Rxg8B9e5jvB8=
+    global:
+      - MOZ_HEADLESS=1
 deploy:
   - provider: rubygems
     api_key:
