--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -1,9 +1,14 @@
 name: Test and deploy
 
-on: push
+on:
+- push
+- workflow_dispatch
 
 jobs:
   test_and_deploy:
+    env:
+      RACK_ENV: test
+      RAILS_ENV: test
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -20,6 +25,7 @@ jobs:
       uses: ruby/setup-ruby@21351ecc0a7c196081abca5dc55b08f085efe09a
       with:
         ruby-version: 2.6.3
+        bundler: 2.1.4
     - name: Install dependencies
       run: bundle install
     - name: Run migrations
