--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -29,8 +29,18 @@ jobs:
         bundler-cache: true
     - name: Load schema
       run: bundle exec rake db:schema:load
+    - name: Setup hosts
+      run: |
+        echo '
+
+          127.0.0.1 test.localmumuki.io
+        ' | sudo tee -a /etc/hosts
+    - name: Setup Xvfb
+      run: Xvfb :99 &
     - name: Run tests
       run: bundle exec rake
+      env:
+        DISPLAY: :99
 
   test-firefox:
     env:
