Use bundler cache for actions

--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -26,8 +26,7 @@ jobs:
       with:
         ruby-version: 2.6.3
         bundler: 2.1.4
-    - name: Install dependencies
-      run: bundle install
+        bundler-cache: true
     - name: Load schema
       run: bundle exec rake db:schema:load
     - name: Run tests
